python-test_driven_development/tests/0-add_integer.txt
>>> add_integer = __import__('0-add_integer').add_integer

>>> add_integer(42, 4)
46

>>> add_integer(3, -5)
-2

>>> add_integer(8.2, -2.0)
6

>>> add_integer("salam", 5)
Traceback (most recent call last):
TypeError: a must be an integer

>>> add_integer(8.762378691696962, 5)
13

>>> add_integer(,)
Traceback (most recent call last):
      File "/usr/lib/python3.9/doctest.py", line 1336, in __run
        exec(compile(example.source, filename, "single",
      File "<doctest 0-add_integer.txt[6]>", line 1
        add_integer(,)
                    ^
    SyntaxError: invalid syntax